--- a/assets/jass.css
+++ b/assets/jass.css
@@ -880,7 +880,7 @@ a:hover {
 }
 
 .text-primary {
-  color: #2d3e50 !important;
+  color: black !important;
 }
 
 .text-info {
@@ -896,7 +896,7 @@ a:hover {
 }
 
 .text-light {
-  color: #d9e9e8 !important;
+  color: whitesmoke !important;
 }
 
 .text-dark {
@@ -929,7 +929,7 @@ a:hover {
 }
 
 .bg-light {
-  background-color: #d9e9e8 !important;
+  background-color: whitesmoke !important;
 }
 
 .bg-dark {
@@ -1010,7 +1010,7 @@ a:hover {
 
 .btn.btn-primary {
   background-color: #2d3e50;
-  color: #d9e9e8;
+  color: whitesmoke;
 }
 
 .btn.btn-primary:hover {
@@ -1027,26 +1027,26 @@ a:hover {
 }
 
 .btn.btn-info {
-  background-color: #1bbc9b;
+  background-color: crimson;
   color: #ffffff;
 }
 
 .btn.btn-info:hover {
-  background-color: #31e1bd;
+  background-color: crimson;
 }
 
 .btn.btn-light {
-  background-color: #d9e9e8;
+  background-color: whitesmoke;
   color: #1a1a1a;
 }
 
 .btn.btn-light:hover {
-  background-color: #84b8b4;
+  background-color: darkred;
 }
 
 .btn.btn-dark {
   background-color: #1a1a1a;
-  color: #d9e9e8;
+  color: whitesmoke;
 }
 
 .btn.btn-dark:hover {
@@ -1081,14 +1081,14 @@ a:hover {
 }
 
 .card {
-  border: 1px solid #1a1a1a;
+  border: 1px none #1a1a1a;
   margin-bottom: 1rem;
 }
 
 .card .card-header {
   padding: 0.375rem;
   background-color: #2d3e50;
-  color: #d9e9e8;
+  color: whitesmoke;
 }
 
 .card .card-body {
@@ -1165,7 +1165,7 @@ form [type='radio'] {
 }
 
 .container {
-  width: 85%;
+  width: 100%;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -1252,8 +1252,8 @@ form [type='radio'] {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  margin-left: -15px;
-  margin-right: -15px;
+  /* margin-left: -15px; */
+  /* margin-right: -15px; */
 }
 
 [class*='col-'] {
