--- a/assets/style.css
+++ b/assets/style.css
@@ -99,5 +99,18 @@ body {
   .hide {
 
     display: none;
-    
+
+  }
+
+
+  .lowUV{
+    background-color: green;
+  }
+
+  .medUV{
+    background-color: yellow;
+  }
+
+  .highUV{
+    background-color: red;
   }
