--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Fredoka One", cursive;
+  font-family: 'Baloo Tammudu 2', cursive;
 }
 
 h1,
@@ -8,7 +8,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Fredoka One", cursive;
+  font-family: 'Baloo Tammudu 2', cursive;
   font-weight: 700;
 }
 
@@ -18,6 +18,7 @@ h6 {
 }
 
 .dayF {
+  padding-top: 7px;
   margin-top: 5px;
   border-top: skyblue;
   /* border-bottom: black; */
